--- a/src/app/core/superadmin/aduan-tabs/aduan-tabs.page.html
+++ b/src/app/core/superadmin/aduan-tabs/aduan-tabs.page.html
@@ -11,15 +11,15 @@
   </ion-header>
 
   <ion-tab-bar color="primary" slot="bottom">
-    <ion-tab-button  tab="selesai">
+    <ion-tab-button tab="selesai" class="selesai">
       <ion-icon name="checkmark-circle"></ion-icon>
       <ion-label>Selesai</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="perhatian">
-      <ion-icon name="glasses"></ion-icon>
+    <ion-tab-button tab="perhatian" class="perhatian">
+      <ion-icon name="alert-circle"></ion-icon>
       <ion-label>Dalam Perhatian</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="ditolak">
+    <ion-tab-button tab="ditolak" class="ditolak">
       <ion-icon name="close-circle"></ion-icon>
       <ion-label>Ditolak</ion-label>
     </ion-tab-button>
