--- a/src/app/core/superadmin/list/aduan-selesai-list/aduan-selesai-list.page.html
+++ b/src/app/core/superadmin/list/aduan-selesai-list/aduan-selesai-list.page.html
@@ -18,8 +18,13 @@
 
 <ion-content [fullscreen]="true" fixed>
   <div id="container" class="background">
+    <ion-item *ngIf="isSuperAdmin || isAdmin">
+      <ion-datetime (ionChange)="selectBulanTahun($event)" display-format="MMM YYYY" min="2020" max="2099-10-31"
+        placeholder="Bulan Tahun">
+      </ion-datetime>
+    </ion-item>
+    <br>
     <ion-content class="transparent">
-
       <ion-list>
         <p *ngIf="!haveInfo" class="ion-text-center" style="color:rgb(206, 206, 206)">Tiada maklumat status aduan</p>
         <div *ngFor="let aduan of aduans$|async" (click)="openDetailModal(aduan)">
@@ -38,6 +43,7 @@
             <span style="font-size: 10px; float: right; color: black;">Lihat Butiran ></span>
           </ion-card>
         </div>
+        <br><br><br>
       </ion-list>
 
     </ion-content>
