--- a/src/app/core/admin/create-jalan/create-jalan.page.html
+++ b/src/app/core/admin/create-jalan/create-jalan.page.html
@@ -48,7 +48,7 @@
                   </ion-item>
                 </ion-col>
                 <ion-col size="6">
-          j        <ion-label position="floating">Tarikh Akhir</ion-label>
+                  <ion-label position="floating">Tarikh Akhir</ion-label>
                   <ion-item color="light">
                     <ion-datetime formControlName="end_date" min="2020" max="2099-10-31" placeholder="Pilih">
                     </ion-datetime>
@@ -75,8 +75,8 @@
               </ion-item>
               <ion-label position="floating">Pihak Bertanggungjawab</ion-label>
               <ion-item color="light">
-                <ion-input formControlName="response_party" type="text" placeholder="Nyatakan Pihak"
-                  [value]="res_party" disabled="true"></ion-input>
+                <ion-input formControlName="response_party" type="text" placeholder="Nyatakan Pihak" [value]="res_party"
+                  disabled="true"></ion-input>
               </ion-item>
             </div>
             <div padding class="btn-custom">
