--- a/src/app/core/superadmin/profile/profile.page.html
+++ b/src/app/core/superadmin/profile/profile.page.html
@@ -36,13 +36,20 @@
             </div>
             <div class="input">
               <ion-item>
-                <ion-input formControlName="organisasi" placeholder="Nama Organisasi" type="text"></ion-input>
+                <ion-select formControlName="organisasi" placeholder="Organisasi" interface="action-sheet">
+                  <ion-select-option value="JKR">JKR</ion-select-option>
+                  <ion-select-option value="KKR">KKR</ion-select-option>
+                </ion-select>
               </ion-item>
             </div>
             <div class="input">
-              <ion-item>
-                <ion-input formControlName="jawatan" placeholder="Nama Jawatan" type="text"></ion-input>
-              </ion-item>
+                <ion-item>
+                  <ion-select formControlName="jawatan" placeholder="Jawatan" interface="action-sheet">
+                    <ion-select-option *ngFor="let pos of position; let i = index" [value]="pos.jawatan">
+                      {{pos.jawatan}}
+                    </ion-select-option>
+                  </ion-select>
+                </ion-item>
             </div>
             <div class="input2">
               <ion-item>
