--- a/src/app/core/superadmin/list/aduan-perhatian-list/aduan-perhatian-list.page.html
+++ b/src/app/core/superadmin/list/aduan-perhatian-list/aduan-perhatian-list.page.html
@@ -30,8 +30,8 @@
         <br *ngIf="isUser">
         <p *ngIf="!haveInfo" class="ion-text-center" style="color:rgb(206, 206, 206)">Tiada maklumat status aduan</p>
         <div *ngFor="let aduan of aduans$|async" (click)="openDetailModal(aduan)">
-          <ion-badge *ngIf="aduan.status_code === null || aduan.status_code === 'P'" color="secondary" mode="ios">
-            {{aduan.status_desc === null ? 'Dalam Perhatian': aduan.status_desc}}
+          <ion-badge *ngIf="aduan.status_code === null || aduan.status_code === 'P' || aduan.status_code === 'A'" color="secondary" mode="ios">
+            Dalam Perhatian
           </ion-badge>
           <ion-badge *ngIf=" aduan.status_code === 'S'" color="success" mode="ios">{{aduan.status_desc}}
           </ion-badge>
