--- a/src/app/core/superadmin/dashboard/dashboard.page.html
+++ b/src/app/core/superadmin/dashboard/dashboard.page.html
@@ -17,7 +17,7 @@
       </ion-list>
     </ion-toolbar>
 
-    <div #map id="map"></div>
+    <div #map id="map_canvas"></div>
 
     <ion-tab-bar slot="bottom" color-primary>
       <ion-tab-button (click)="openProfile()">
