--- a/src/app/core/admin/dashboard/dashboard.page.html
+++ b/src/app/core/admin/dashboard/dashboard.page.html
@@ -20,7 +20,7 @@
 
     <div #map id="map"></div>
 
-    <ion-tab-bar slot="bottom" color-primary>
+    <ion-tab-bar slot="bottom" color="primary">
       <ion-tab-button (click)="openProfile()">
         <ion-icon name="person-outline"></ion-icon>
         <ion-label>Profil</ion-label>
