--- a/src/app/core/admin/dashboard/dashboard.page.scss
+++ b/src/app/core/admin/dashboard/dashboard.page.scss
@@ -1,30 +1,34 @@
 #map {
   min-height: 100%;
+  position: relative;
 }
 
 ion-tab-bar {
   position: absolute;
   bottom: 0;
-  width: 90%;
+  width: 100%;
   background: var(--ion-color-primary);
   align-self: center;
   border-radius: 23px;
-  margin: 0 10px 25px;
+  margin: 0 auto 25px;
   padding: 10px 0;
 
   ion-tab-button {
-    background: var(--ion-color-primary);
+    // background: var(--ion-color-primary);
     color: white;
+    // width:100%;
   }
 }
 
 ion-toolbar {
   position: absolute;
   top: 13px;
-  width: 90%;
+  width: 100%;
   align-self: center;
+  justify-items: center;
+  text-align: center;
   border-radius: 23px;
-  margin: 25s 17px 0;
+  margin: 25px auto 0;
   padding: 5px 5px;
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 
@@ -45,4 +49,37 @@ ion-toolbar {
   ion-item {
     --background-color: transparent !important;
   }
+}
+
+ion-fab {
+  bottom: 16%;
+
+  .buttondaftar {
+    height: 45px;
+    width: 90px;
+    // white-space: normal;
+    font-size: 10px;
+  }
+
+  ion-fab-button[data-desc] {
+    position: relative;
+  }
+}
+
+ion-fab-button[data-desc]::after {
+  position: absolute;
+  content: attr(data-desc);
+  z-index: 1;
+  right: 55px;
+  bottom: 4px;
+  background-color: var(--ion-color-primary);
+  padding: 9px;
+  border-radius: 15px;
+  color: white;
+  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+}
+
+ion-fab-button.custom-fab {
+  height: 50px;
+  width: 50px;
 }
