--- a/src/app/core/user/dashboard/dashboard.page.scss
+++ b/src/app/core/user/dashboard/dashboard.page.scss
@@ -5,9 +5,9 @@
 ion-tab-bar {
   position: absolute;
   bottom: 0;
-  width: 90%;
+  width: 100%;
   background: var(--ion-color-primary);
-  align-self: center;
+  // align-self: center;
   border-radius: 23px;
   margin: 0 10px 25px;
   padding: 10px 0;
@@ -21,8 +21,8 @@ ion-tab-bar {
 ion-toolbar {
   position: absolute;
   top: 13px;
-  width: 90%;
-  align-self: center;
+  width: 100%;
+  // align-self: center;
   border-radius: 23px;
   margin: 25s 17px 0;
   padding: 5px 5px;
