--- a/src/app/core/admin/statistic/statistic.page.html
+++ b/src/app/core/admin/statistic/statistic.page.html
@@ -20,7 +20,7 @@
       <h1 class="aduantotal">{{theTotal}}</h1>
     </ion-text>
   </div>
-  <div class="center-box">
+  <div class="center-box" style="padding-top: 20px;">
     <ion-item>
       <ion-select value="jumlah_aduan" interface="action-sheet" placeholder="Pilih" (ionChange)="selectAduan($event)">
         <ion-select-option value="jumlah_aduan">JUMLAH ADUAN</ion-select-option>
